# tapedeck

./: Cargo.toml  README.md
scripts/: release.sh
src/: app.rs  constants.rs  input.rs  main.rs  messages.rs
src/audio/: buffer.rs  engine.rs  mixer.rs  mod.rs  recorder.rs  transport.rs
src/effects/: chorus.rs  delay.rs  distortion.rs  filter.rs  mod.rs  reverb.rs
src/project/: load.rs  metadata.rs  mod.rs  save.rs
src/sequencer/: clock.rs  drum_kit.rs  mod.rs  pattern.rs
src/synth/: mod.rs  voice.rs
src/synth/engines/: fm.rs  mod.rs  noise.rs  saw.rs  sine.rs  string.rs
src/tape/: mod.rs  simulation.rs  speed.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/views/: drum_view.rs  mixer_view.rs  mod.rs  synth_view.rs  tape_view.rs
src/ui/widgets/: cassette.rs  keyboard_hint.rs  knob.rs  mod.rs  mode_indicator.rs  step_grid.rs  track_selector.rs  transport_bar.rs  vu_meter.rs  waveform.rs
