[package]
name = "tapedeck"
version = "0.2.0"
edition = "2021"
description = "Terminal-based 4-track cassette recorder"

[dependencies]
cpal = "0.15"
fundsp = "0.18"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
crossbeam-channel = "0.5"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
